# tgbot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: __main__.py  inline_kb.py  main.py  settings.py  telegram_ext.py  texts.py
src/callback/: entertainment.py
src/dependencies/: hh_dep.py
src/handlers/: entertainment.py  start.py  vacancies.py
src/hh_api/: hh_service.py
src/utils/: httpx_client.py  tools.py  validators.py
